# Subscriptions-tracker

./: INSTALL_LINUX.md  README.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build.yml  release.yml
src/: App.jsx  appConfig.js  index.css  subscriptionLogic.js  tauriApi.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs
src/components/: AnalyticsPanel.jsx  DashboardHeader.jsx  DatePicker.jsx  DeleteSubscriptionModal.jsx  PaymentEntriesModal.jsx  RenewSubscriptionModal.jsx  SettingsModal.jsx  SubscriptionForm.jsx  SubscriptionListPanel.jsx  UpcomingRenewalsCard.jsx  subscriptionListView.js  subscriptionListView.test.js
src/hooks/: useModalEffects.js  useSubscriptionActions.js  useSubscriptionDashboard.js  useSubscriptionPersistence.js  useThemePreference.js
src/lib/: subscriptionExport.js  subscriptionSubmission.js  subscriptions.js  subscriptions.test.js
test/: subscriptionLogic.test.js  tauriApi.test.js
